--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "@payloadcms/payload-plugin-template",
-  "version": "0.0.0=1",
-  "homepage:": "https://payloadcms.com",
-  "repository": "git@github.com:payloadcms/payload-plugin-template.git",
-  "description": "Blank plugin template for Payload",
+  "name": "plugin-traffic-logger",
+  "version": "0.0.1",
+  "description": "Traffic Logger Plugin for PayloadCMS [under development]",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "keywords": [
@@ -22,7 +20,7 @@
     "clean": "rimraf dist && rimraf dev/yarn.lock",
     "prepublishOnly": "yarn clean && yarn build && cd dev && yarn test"
   },
-  "author": "dev@payloadcms.com",
+  "author": "info@10xmedia.de",
   "license": "MIT",
   "peerDependencies": {
     "payload": "^2.0.0"
